# upload_r2_service

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  bandit.yaml  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  dockerize.yml
upload_service/: models.py  serializers.py  service.py  tests.py  urls.py  views.py
upload_service/migrations/: 0001_initial.py
upload_service/utils/: __init__.py  file_management.py  format_serializer.py  responses.py  timeout.py
video_upload/: asgi.py  settings.py  urls.py  wsgi.py
